# cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  main.yml  release.yml
src/: main.rs
src/api/: db.rs  module.rs
src/dialoguer/: mod.rs
src/http/: mod.rs
