[package]
name = "iasql"
description = "Manage cloud infrastructure using a hosted PostgreSQL DB"
homepage = "https://iasql.com"
version = "0.2.8"
edition = "2018"

[dependencies]
ascii_table = "3.0"
clap = "2.33.1"
dialoguer = "0.8.0"
futures = "0.3.21"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "server"] }
hyper-tls = "0.5" # needed for HTTPS w/ hyper
indicatif = "0.16.2"
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_ini = { version = "0.2" }
serde_json = { version = "1.0" }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "time"] }
webbrowser = "0.6.0"
